finished basic my account

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -21,6 +21,8 @@ $headers-font: "Manrope", "Open Sans";
 
 h1 {
   font-size: 64px !important;
+  font-weight: 800 !important;
+  color: $secondarycolor !important;
 }
 
 h2 {
