--- a/app/views/my_account/show.html.erb
+++ b/app/views/my_account/show.html.erb
@@ -5,10 +5,11 @@
   <div class="d-flex">
     <div class="w-25 box-shadow-basic round-corners my-account-nav-container">
       <ul class="list-unstyled nav-list">
-        <li>My Profile</li>
-        <li>Messages</li>
-        <li>Bookmarks</li>
-        <li>History</li>
+        <li><i class="fa-solid fa-caret-right"></i>  My Profile</li>
+        <li><i class="fa-solid fa-caret-right"></i>  Messages</li>
+        <li><i class="fa-solid fa-caret-right"></i>  Notes</li>
+        <li><i class="fa-solid fa-caret-right"></i>  Bookmarks</li>
+        <li><i class="fa-solid fa-caret-right"></i>  History</li>
       </ul>
     </div>
     <div class="w-75 round-corners box-shadow-basic my-account-main-container">
