--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
       </div>
         <h3>Practise foreign languages with authentic materials.</h2>
         <p class="my-4">Lengua Viva gives you personalised recommendations for songs, podcasts, articles and videos in your language of choice</p>
-        <%= link_to "Sign Up Now", new_user_registration_path, class: "btn my-4 btn-info sign-up-btn" %>
+        <%= link_to "Get Started", resources_path, class: "btn my-4 btn-info sign-up-btn" %>
 
     </div>
   </div>
