--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,6 +1,6 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.1)), url(/assets/orange.png);">
   <div class="container">
-    <h1><strong>Level up your language</strong></h1>
+    <h1 class="text-white"><strong>Level up your language</strong></h1>
     <p><strong>Welcome to your personalised feed</strong></p>
 
     <div class="input-group rounded w-50">
