--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -1,14 +1,18 @@
 .comments-container {
-  width: 35%;
+  background: white;
+  width: 45%;
   position: relative;
   padding: 0 24px 24px 24px;
   h2 {
     font-size: 28px !important;
+    padding-right: 24px;
 }
 
 .existing-comments {
   height: 500px;
   overflow: scroll;
+  padding-right: 24px;
+  scrollbar-color: $primarycolor;
 }
 
 
@@ -21,11 +25,11 @@
   }
   .del {
     text-align: right;
-    color: $secondarycolor;
+    color: #CED4DA;
     transition: 0.3s;
   }
   .del:hover {
-    color: $darkersecondarycolor;
+    color: $secondarycolor;
   }
 }
 
