--- a/app/views/shared/_comments.html.erb
+++ b/app/views/shared/_comments.html.erb
@@ -1,4 +1,4 @@
-<h2 class="border-bottom pb-2">Comments</h2>
+<h2 class="pb-2">Comments</h2>
 <div class="existing-comments">
   <%# <i class="fa-regular fa-comments"></i> %>
   <% if resource.comments.count > 0 %>
