--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,10 +1,10 @@
-<div class="container-lg-bordered box-shadow-basic">
+<div class="container">
 
   <%= render 'shared/resource_title', resource: @resource %>
   <br>
-  <div class="d-flex justify-content-around w-100">
+  <div class="d-flex justify-content-between container-lg box-shadow-basic p-5">
     <div>
-      <iframe width="680" height="380" src="https://www.youtube.com/embed/<%= @resource.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="580" height="325" src="https://www.youtube.com/embed/<%= @resource.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <%= render "shared/interactions" %>
     </div>
 
