--- a/app/views/podcasts/_podcast.html.erb
+++ b/app/views/podcasts/_podcast.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div class="card-details">
       <div class="resource-likes">
-        <p><i class="fa-solid fa-eye"></i></i> <%= podcast.views.count %>  <i class="fa-solid fa-thumbs-up"></i> <%= podcast.likes.count %></p>
+        <p><i class="fa-solid fa-eye"></i></i> <strong><%= podcast.views.count %></strong>  <i class="fa-solid fa-thumbs-up"></i> <strong><%= podcast.likes.count %></strong></p>
       </div>
     </div>
   </div>
