--- a/app/assets/stylesheets/components/_index_feature.scss
+++ b/app/assets/stylesheets/components/_index_feature.scss
@@ -12,6 +12,7 @@
   object-fit: cover;
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
   margin: 0px 48px 0px 0px;
+  position: relative;
 }
 
 .featured-content img:hover {
@@ -27,11 +28,12 @@
 }
 
 .featured-content p {
-  font-size: 18px;
+  font-size: 17px;
   line-height: 1.4;
   opacity: .7;
   margin-bottom: 0;
   margin-top: 8px;
+  padding-bottom: 16px;
 }
 
 .featured-content .featured-content-info {
@@ -42,14 +44,13 @@
   box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
   overflow: hidden;
   text-overflow: ellipsis;
-  position: relative;
 }
 
-.featured-content .featured-content-info:hover {
-  transition: 0.2s ease;
-  transform: scale(1.01);
-  box-shadow: 3px 3px 5px $secondarycolor;
-}
+// .featured-content .featured-content-info:hover {
+//   transition: 0.2s ease;
+//   transform: scale(1.01);
+//   box-shadow: 3px 3px 5px $secondarycolor;
+// }
 
 #video-spotlight-icon {
   position: absolute;
