--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,6 +1,6 @@
 .navbar-lenguaviva {
   justify-content: space-between;
-  background: $primarycolor;
+  background: white;
   height: 60px;
   box-shadow: 4px 4px 10px rgba(20,20,20,0.4);
 
