--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div class="card-details">
       <div class="resource-likes">
-        <p><i class="fa-solid fa-eye"></i></i> <%= article.views.count %>  <i class="fa-solid fa-thumbs-up"></i> <%= article.likes.count %> </p>
+        <p><i class="fa-solid fa-eye"></i></i><strong> <%= article.views.count %>  </strong><i class="fa-solid fa-thumbs-up"></i><strong> <%= article.likes.count %> </strong></p>
       </div>
     </div>
   </div>
