--- a/app/views/videos/_video.html.erb
+++ b/app/views/videos/_video.html.erb
@@ -18,7 +18,7 @@
     </div>
     <div class="card-details">
       <div class="resource-likes">
-        <p><i class="fa-solid fa-eye"></i></i> <%= video.views.count %> <i class="fa-solid fa-thumbs-up"></i> <%= video.likes.count %></p>
+        <p><i class="fa-solid fa-eye"></i></i><strong> <%= video.views.count %> </strong><i class="fa-solid fa-thumbs-up"></i><strong> <%= video.likes.count %></strong></p>
       </div>
     </div>
   </div>
