logo added to homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="d-flex m-0 justify-content-between align-items-between">
   <div class="w-50 landing-bg px-4">
     <div class="container landing-text">
+      <%= image_tag "LenguaVivaTransparentcropped.png", width: 200, class: "landing-logo mb-4" %>
       <div class="typewriter">
         <h1>Level Up Your Language</h1>
       </div>
