--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,11 +1,19 @@
+
+<%= render 'shared/resource_title', resource: @resource %>
+
 <div class="container-lg-bordered box-shadow-basic">
 
-  <%= render 'shared/resource_title', resource: @resource %>
+
   <br>
   <div class="d-flex justify-content-around w-100">
     <div>
       <iframe width="680" height="380" src="https://www.youtube.com/embed/<%= @resource.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <%= render "shared/interactions" %>
+
+      <div class="d-flex justify-content-between">
+        <%= render "shared/reviews", resource: @resource %>
+        <%= render "shared/interactions" %>
+      </div>
+
     </div>
 
     <div class="comments-container ml-4">
