--- a/app/assets/stylesheets/components/_reviews.scss
+++ b/app/assets/stylesheets/components/_reviews.scss
@@ -1,37 +1,78 @@
 .new-review-container {
   width: 420px;
-  margin-left: 32px;
   position: relative;
+  display: flex;
+  flex-direction: column;
 
   .form-select {
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 100px;
+    border-radius: 24px;
+    height: 40px;
   }
 
   .form-control {
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 100px;
+    resize: none;
+    border-radius: 24px;
+    padding: 15px;
+    height: 80px;
   }
 
   .review-button {
     height: 36px;
     width: 36px;
     border-radius: 50%;
-    font-size: 16px;
+    font-size: 20px;
     padding: 0;
     color: #fafafa;
     position: absolute;
     right: 0px;
   }
-}
 
-.star-icon {
-  font-size: 26px !important;
-  color: yellow !important;
+  .review-button:hover {
+    color: $secondarycolor;
+    background-color: $primarycolor;
+    border: none;
+  }
+
+  h5 {
+    color: $secondarycolor;
+    margin-top: 5px;
+    margin-bottom: 15px;
+  }
 }
 
 .posted-review-container {
   width: 420px;
-  margin-left: 32px;
-  // border: 1px solid $grey;
+}
+
+.fa-star {
+  color: rgb(255, 217, 0);
+}
+
+.fa-trash-can {
+  color: #ced4da;
+  padding-top: 10px;
+  padding-right: 3px;
+
+  &:hover {
+    color: $secondarycolor;
+  }
+}
+
+.review-heading {
+  border-bottom: 1px solid #ced4da;
+  display: flex;
+  justify-content: space-between;
+
+  h5 {
+    color: $secondarycolor;
+    margin-top: 5px;
+  }
+}
+
+.review-content {
+  padding: 10px 10px 10px 0px;
 }
