--- a/app/views/shared/_view_button.html.erb
+++ b/app/views/shared/_view_button.html.erb
@@ -1,5 +1,5 @@
 <%= link_to  resource_views_path(@resource), method: :post, class: "view-btn" do %>
   <p><i class="fas fa-plus"></i> Record a view</p>
 <% end %>
-<p>Total views: <%= @resource.views.count  %></p>
-<p>Your views: <%= @resource.views.where(user: current_user).count %> </p>
+<%# <p>Total views: <%= @resource.views.count  %>
+<%# <p>Your views: <%= @resource.views.where(user: current_user).count %>
