--- a/app/assets/stylesheets/components/_reviews.scss
+++ b/app/assets/stylesheets/components/_reviews.scss
@@ -1,5 +1,5 @@
 .new-review-container {
-  width: 420px;
+  width: 100%;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -45,7 +45,7 @@
 }
 
 .posted-review-container {
-  width: 420px;
+  width: 100%;
 }
 
 .fa-star {
