--- a/app/views/shared/_like_button.html.erb
+++ b/app/views/shared/_like_button.html.erb
@@ -1,12 +1,12 @@
 <% if @resource.liked?(current_user) %>
 
-  <%= link_to like_path(@like), method: :delete, class: "like-icon" do %>
+  <%= link_to like_path(@like), method: :delete, class: "like-icon", remote: true do %>
     <i class="fa-solid fa-heart"></i>
   <% end %>
 
 <% else %>
 
-  <%= link_to resource_likes_path(@resource), method: :post, class: "like-icon" do %>
+  <%= link_to resource_likes_path(@resource), method: :post, class: "like-icon", remote: true do %>
     <i class="fa-regular fa-heart"></i>
   <% end %>
 
