--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -3,6 +3,9 @@
   <br>
 
   <div class="d-flex justify-content-between container-lg box-shadow-basic p-5">
+    <div class="add-view mt-3">
+      <%= render "shared/view_button" %>
+    </div>
     <div class="d-flex flex-column align-items-end">
       <%= image_tag "articles_cropped.png", alt: "image of newspaper", id: "articles" %>
       <%= link_to "Read article", @resource.url %>
