--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -16,8 +16,7 @@
 
   <h2>Spotlight</h2>
   <div class="featured-content">
-    <div class="featured-content-image">
-    <%= image_tag("orange.png") %>
+    <%= image_tag("fridakahlo.png") %>
 
     <div class="featured-content-info">
       <h3><strong>Un recorrido por un lado distinto de la vida de Frida Kahlo</strong></h3><a href= "/videos/3"><i id="video-spotlight-icon" class="fa-solid fa-video"></i></a>
