fixed del button

--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -27,6 +27,7 @@
     text-align: right;
     color: #CED4DA;
     transition: 0.3s;
+    margin-left: 16px !important;
   }
   .del:hover {
     color: $secondarycolor;
