--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="card-image">
-    <%= image_tag(article.thumbnail_url) %>
+    <%# <%= image_tag(article.thumbnail_url) %> %>
     <div class="card-tags">
       <p>Cooking</p>
     </div>
