Added styling for video show page

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -20,8 +20,9 @@
 .footer-content {
   width: 170px;
   a {
-    color: rgb(189, 200, 228);
+    color: rgb(80,80,80);
     text-decoration: none;
+    transition: 0.3s;
   }
 
   a:hover {
@@ -38,7 +39,7 @@
 }
 
 .footer-content h6 {
-  color: $secondarycolor;
+  color: rgb(80,80,80);
 }
 
 .fa-brands {
