--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -1,8 +1,6 @@
 .comments-container {
-  background: white;
-  width: 45%;
+  width: 100%;
   position: relative;
-  padding: 0 24px 24px 24px;
   h2 {
     font-size: 28px !important;
     padding-right: 24px;
@@ -66,11 +64,12 @@
     position: absolute;
     right: 15px;
     top: 87px;
+    background: $turquoise !important;
+    border: none;
   }
 
   .comment-button:hover {
-    color: $secondarycolor;
-    background-color: $primarycolor;
+    background-color: $darkerturquoise !important;
     border: none;
   }
 
