--- a/app/assets/stylesheets/components/_interactions.scss
+++ b/app/assets/stylesheets/components/_interactions.scss
@@ -1,9 +1,9 @@
 .bookmark-icon, .like-icon, .like-count {
-  color: $secondarycolor !important;
+  color: $turquoise !important;
   text-decoration: none;
   font-size: 28px !important;
   &:hover {
-    color: $darkersecondarycolor;
+    color: $darkerturquoise !important;
   }
 }
 
