--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,7 +2,6 @@
   justify-content: space-between;
   background: white;
   height: 60px;
-  box-shadow: 4px 4px 10px rgba(20,20,20,0.4);
 
   .navbar-logo {
     height: 45px;
@@ -17,11 +16,18 @@
 .nav-item-link {
   padding-top: 5px;
   margin-right: 16px;
+  .nav-link-feed {
+    border-bottom: 3px solid $yellow;
+  }
+  .nav-link-account {
+    border-bottom: 3px solid $turquoise;
+  }
 }
 
 .nav-link {
+  padding: 8px 0 0 0 !important;
   font-weight: 400;
-  color: $blue-grey;
+  color: rgb(40,40,40);
   &:hover {
     color: $secondarycolor;
   }
