--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,14 +2,17 @@
 
 // For example:
 $red: #F16567;
-$yellow: #FFC65A;
+$yellow: #F9CA73;
+$darkeryellow: #f3b238;
 $orange: #E67E22;
 $green: #75dbadb9;
+$turquoise: #8AD0C5;
+$darkerturquoise: #5daa9e;
 $gray: #0e00009d;
 $light-gray: #F4F4F4;
-$secondarycolor: #ff8e00;
+$secondarycolor: #F18889;
 $darkersecondarycolor: #ff6600;
-$primarycolor: #2c599d;
+$primarycolor: #83B3E1;
 $blue-grey: rgb(189, 200, 228);
 $dark-grey: rgb(20, 20, 20);
 $off-white: rgb(250, 250, 250);
