--- a/app/assets/stylesheets/pages/_resources-index.scss
+++ b/app/assets/stylesheets/pages/_resources-index.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgba(255,255,255, 0.8);
 }
 
 .index-container h2 {
