--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
           <li class="nav-item-link active">
-            <%= link_to "My Feed", resources_path, class: "nav-link" %>
+            <%= link_to "My Feed", resources_path, class: "nav-link nav-link-feed" %>
           </li>
           <li class="nav-item-link">
-            <%= link_to "My Account", my_account_path(current_user), class: "nav-link" %>
+            <%= link_to "My Account", my_account_path(current_user), class: "nav-link nav-link-account" %>
           </li>
           <li class="nav-item dropdown">
             <% if current_user.photo.attached? %>
