home and index styled

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,5 @@
 .lengua-viva-footer {
-  background-color: $primarycolor;
+  background-color: rgba(255,255,255, 0.5);
 }
 
 .lv-footer-container {
@@ -8,7 +8,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   margin: auto;
-  max-width: 1065px;
+  max-width: 860px;
   padding: 16px 40px;
 }
 
