--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.1)), url(<%= image_path("orange.png") %>)";>
+<div class="banner">
   <div class="container">
     <h1 class="text-white"><strong>Level up your language</strong></h1>
     <p><strong>Welcome to your personalised feed</strong></p>
