--- a/app/assets/stylesheets/components/_index_hero.scss
+++ b/app/assets/stylesheets/components/_index_hero.scss
@@ -1,22 +1,19 @@
 .banner {
-  background-size: cover;
-  background-position: center;
-  padding: 150px 0;
+  background-color: rgba(255,255,255, 0.5);
+  height: 400px;
+  padding: 100px 0 0 250px;
 }
 
 .banner h1 {
   margin: 0;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  color: $secondarycolor !important;
   font-size: 32px;
   font-weight: bold;
 }
 
 .banner p {
   font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  color: $gray;
 }
 
 .banner btn btn-info {
