--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -10,7 +10,11 @@
 .container-lg {
   width: 100%;
   margin: 0 !important;
-  background-color: rgba(255,255,255, 0.8)
+}
+
+.container-transp {
+  background-color: rgba(255,255,255, 0.5);
+  padding: 0 60px;
 }
 
 .container-lg-bordered-no-mt {
