--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar navbar-expand-sm navbar-lenguaviva" id="navBar">
   <div class="container-fluid">
-    <%= link_to image_tag("LenguaViva2.png", height: 42), root_path, alt: "Lengua Viva logo" %>
+    <%= link_to image_tag("lengua_viva_logo_cropped.png", class: "navbar-logo"), root_path, alt: "Lengua Viva logo" %>
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
