--- a/app/views/videos/show.html.erb
+++ b/app/views/videos/show.html.erb
@@ -1,18 +1,18 @@
-<div class="container">
-  <div class="d-flex justify-content-between container-lg py-4">
-    <div class="resource-comments-container px-4">
-      <%= render 'shared/resource_title', resource: @resource %>
-      <br>
-      <iframe width="100%" height="480" src="https://www.youtube.com/embed/<%= @resource.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <%= render "shared/interactions" %>
-      <div class="comments-container">
-        <%= render "shared/comments", resource: @resource %>
-        <%= render "shared/new_comment_form", resource: @resource %>
+<div class="container-transp">
+    <div class="d-flex justify-content-between container-lg py-4">
+      <div class="resource-comments-container px-4">
+        <%= render 'shared/resource_title', resource: @resource %>
+        <br>
+        <iframe width="100%" height="480" src="https://www.youtube.com/embed/<%= @resource.url_id %>"  title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <%= render "shared/interactions" %>
+        <div class="comments-container">
+          <%= render "shared/comments", resource: @resource %>
+          <%= render "shared/new_comment_form", resource: @resource %>
+        </div>
       </div>
-    </div>
 
-    <div class="d-flex justify-content-between note-container pt-4">
-      <%= render "shared/reviews", resource: @resource %>
-    </div>
+      <div class="d-flex justify-content-between note-container pt-4">
+        <%= render "shared/reviews", resource: @resource %>
+      </div>
   </div>
 </div>
