--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,7 +1,8 @@
 <div class="banner">
   <div class="container">
     <h1 class="text-white"><strong>Level up your language</strong></h1>
-    <p><strong>Welcome to your personalised feed</strong></p>
+    <h4 class="mt-3"><strong>Welcome to your personalised feed</strong></h4>
+    <p>Browse videos, songs, podcasts and articles, selected just for you.</p>
 
     <div class="input-group rounded w-50">
       <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search" aria-describedby="search-addon" />
@@ -12,7 +13,7 @@
   </div>
 </div>
 
-<div class="index-container">
+<div class="container-transp">
 
   <h2>Spotlight</h2>
   <div class="featured-content">
