--- a/app/views/shared/_reviews.html.erb
+++ b/app/views/shared/_reviews.html.erb
@@ -1,63 +1,65 @@
-<% if @resource.reviews.count > 0 %>
-  <% @resource.reviews.each do |review| %>
-    <div class="posted-review-container">
-      <div class="review-heading mb-3 d-flex">
-        <div class="d-flex">
-          <h5 class="my-note">My note</h5>
-          <% if review.user == current_user %>
-            <%= link_to review_path(review),
-                                            method: :delete,
-                                            class: "del",
-                                            remote: true,
-                                            data: { confirm: "Are you sure?" } do %>
-                                              <i class="fa-solid fa-trash-can"></i>
-                                            <% end %>
-          <% end %>
+<div class="main-reviews-container">
+  <% if @resource.reviews.count > 0 %>
+    <% @resource.reviews.each do |review| %>
+      <div class="posted-review-container">
+        <div class="review-heading mb-3 d-flex">
+          <div class="d-flex">
+            <h5 class="my-note">My note</h5>
+            <% if review.user == current_user %>
+              <%= link_to review_path(review),
+                                              method: :delete,
+                                              class: "del",
+                                              remote: true,
+                                              data: { confirm: "Are you sure?" } do %>
+                                                <i class="fa-solid fa-trash-can"></i>
+                                              <% end %>
+            <% end %>
+          </div>
+        </div>
+        <div class="review-content">
+            <% if review.rating == 1 %>
+              <i class="fas fa-star"></i>
+
+            <% elsif review.rating == 2 %>
+              <% 2.times do  %>
+              <i class="fas fa-star"></i>
+              <% end %>
+
+            <% elsif review.rating == 3 %>
+              <% 3.times do  %>
+              <i class="fas fa-star"></i>
+              <% end %>
+
+            <% elsif review.rating == 4 %>
+              <% 4.times do  %>
+              <i class="fas fa-star"></i>
+              <% end %>
+
+            <% elsif review.rating == 5 %>
+              <% 5.times do  %>
+              <i class="fas fa-star"></i>
+              <% end %>
+            <% end %>
+
+          <p class="mt-2"><%= review.content %></p>
+        </div>
+      <div>
+
         </div>
       </div>
-      <div class="review-content">
-          <% if review.rating == 1 %>
-            <i class="fas fa-star"></i>
-
-          <% elsif review.rating == 2 %>
-            <% 2.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
-
-          <% elsif review.rating == 3 %>
-            <% 3.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
-
-          <% elsif review.rating == 4 %>
-            <% 4.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
-
-          <% elsif review.rating == 5 %>
-            <% 5.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
-          <% end %>
-
-        <p class="mt-2"><%= review.content %></p>
+    <% end %>
+  <% else %>
+    <div class="new-review-container">
+      <div class="d-flex justify-content-between mb-3">
+            <h5>My note</h5>
       </div>
-    <div>
-
-      </div>
+      <%= simple_form_for @review, url: resource_reviews_path(resource), class: "inline" do |f| %>
+        <%= f.input :rating, label: false, :collection => [1, 2, 3, 4, 5], prompt: "#{current_user.first_name}, del 1 al 5, ¿qué te pareció?" %>
+        <%= f.input :content, label: false, required: false, class: "review-text-input", placeholder: "¿Por qué no dejar una nota?" %>
+        <%= button_tag :submit, class: "btn btn-info review-button" do %>
+          <i class="fa-solid fa-plus"></i>
+        <% end %>
+     <% end %>
     </div>
   <% end %>
-<% else %>
-  <div class="new-review-container">
-    <div class="d-flex justify-content-between mb-3">
-          <h5>My note</h5>
-    </div>
-    <%= simple_form_for @review, url: resource_reviews_path(resource), class: "inline" do |f| %>
-      <%= f.input :rating, label: false, :collection => [1, 2, 3, 4, 5], prompt: "#{current_user.first_name}, del 1 al 5, ¿qué te pareció?" %>
-      <%= f.input :content, label: false, required: false, class: "review-text-input", placeholder: "¿Por qué no dejar una nota?" %>
-      <%= button_tag :submit, class: "btn btn-info review-button" do %>
-        <i class="fa-solid fa-plus"></i>
-      <% end %>
-   <% end %>
-  </div>
-<% end %>
+</div>
