--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -1,26 +1,20 @@
-<div class="container">
+<div class="container-transp">
+
   <%= render "shared/resource_title", resource: @resource %>
-  <br>
 
-  <div class="d-flex justify-content-between container-lg box-shadow-basic p-5">
-    <div>
-      <iframe src="<%=@resource.url%>" width="580" height="232" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-       <div class="d-flex justify-content-between">
-        <%= render "shared/reviews", resource: @resource %>
-     </div>
-  </div>
+  <div class="d-flex justify-content-between">
 
+    <div class="resource-comments-container">
+      <iframe src="<%=@resource.url%>" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+      <%= render "shared/interactions" %>
+      <div class="comments-container">
+        <%= render "shared/comments", resource: @resource %>
+        <%= render "shared/new_comment_form", resource: @resource %>
+      </div>
+    </div>
 
-    <div class="comments-container ml-4">
-      <%= render "shared/comments", resource: @resource %>
-      <%= render "shared/new_comment_form", resource: @resource %>
+    <div class="sidebar">
+      <%= render "shared/reviews", resource: @resource %>
     </div>
   </div>
-
-  <div>
-
-  </div>
-  <br>
-  <br>
-  <br>
 </div>
