--- a/app/views/shared/_resource_title.html.erb
+++ b/app/views/shared/_resource_title.html.erb
@@ -1,4 +1,4 @@
-<div class="header pt-4">
+<div class="header my-5">
   <h2><strong><%= resource.title %></strong></h2>
   <h4>by <%= resource.author %></h3>
 </div>
