search function and results paged added

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -7,3 +7,9 @@
   height: 50px;
   font-weight: bold;
 }
+
+.search-button {
+  color: white;
+  background-color: $secondarycolor;
+  border-radius: 0 12px 12px 0;
+}
