--- a/app/views/shared/_reviews.html.erb
+++ b/app/views/shared/_reviews.html.erb
@@ -21,28 +21,8 @@
         </div>
       </div>
       <div class="review-content">
-          <% if review.rating == 1 %>
+          <% review.rating.times do  %>
             <i class="fas fa-star"></i>
-
-          <% elsif review.rating == 2 %>
-            <% 2.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
-
-          <% elsif review.rating == 3 %>
-            <% 3.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
-
-          <% elsif review.rating == 4 %>
-            <% 4.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
-
-          <% elsif review.rating == 5 %>
-            <% 5.times do  %>
-            <i class="fas fa-star"></i>
-            <% end %>
           <% end %>
 
         <p class="mt-2"><%= review.content %></p>
