all show pages complete

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,7 +2,7 @@
 
 // For example:
 $red: #F16567;
-$yellow: #F9CA73;
+$yellow: #F9C973;
 $darkeryellow: #f3b238;
 $orange: #E67E22;
 $green: #75dbadb9;
