--- a/app/views/my_account/show.html.erb
+++ b/app/views/my_account/show.html.erb
@@ -1,9 +1,9 @@
-<div class="container">
+<div class="container-transp">
   <h1 class="mt-4">My Account</h1>
   <p class="mb-4">See all your bookmarked videos and viewing history here</p>
 
   <div class="d-flex">
-    <div class="w-25 box-shadow-basic round-corners my-account-nav-container">
+    <div class="w-25 my-account-nav-container">
       <ul class="list-unstyled nav-list">
         <li><i class="fa-solid fa-caret-right"></i>  My Profile</li>
         <li><i class="fa-solid fa-caret-right"></i>  Messages</li>
@@ -12,7 +12,7 @@
         <li><i class="fa-solid fa-caret-right"></i>  History</li>
       </ul>
     </div>
-    <div class="w-75 round-corners box-shadow-basic my-account-main-container">
+    <div class="w-75 my-account-main-container">
       <div class="my-account-grid-container">
         <h2>Bookmarks</h2>
         <div class="my-account-grid margin-bottom">
