--- a/app/assets/stylesheets/components/_my_account_container.scss
+++ b/app/assets/stylesheets/components/_my_account_container.scss
@@ -6,15 +6,13 @@
 }
 
 .my-account-nav-container {
-  background: white;
   margin-right: 24px;
-  height: 300px;
+  height: 250px;
+  background: rgba(255,255,255, 0.8)
 }
 
 .my-account-main-container {
-  margin-left: 24px;
-  background: white;
-  padding: 24px 24px 48px 24px;
+  padding-bottom: 48px;
   display: flex;
   flex-direction: column;
   align-items: center;
