--- a/app/assets/stylesheets/pages/_resources-index.scss
+++ b/app/assets/stylesheets/pages/_resources-index.scss
@@ -1,16 +1,10 @@
-.index-container {
-  margin-left: auto;
-  margin-right: auto;
-  width: 90vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: rgba(255,255,255, 0.8);
-}
 
-.index-container h2 {
-  width: 100%;
+
+.index-h2 {
   text-align: left;
   margin: 24px 0px;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  display: inline-block;
+  padding: 16px;
+  background-color: rgba(255,255,255,0.5);
+  border-radius: 8px;
 }
