--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -14,7 +14,11 @@
   <div class="card-image">
     <%= image_tag(article.thumbnail_url) %>
     <div class="card-tags">
-      <p>Cooking</p>
+      <% article.tag_list.each do |tag| %>
+      <p>
+      <%= tag %>
+      </p>
+      <% end %>
     </div>
     <div class="card-details">
       <div class="resource-likes">
