--- a/app/views/songs/_song.html.erb
+++ b/app/views/songs/_song.html.erb
@@ -14,7 +14,11 @@
   <div class="card-image">
     <img src="<%= song.thumbnail_url %>">
     <div class="card-tags">
-      <p>Cooking</p>
+      <% song.tag_list.each do |tag| %>
+      <p>
+      <%= tag %>
+      </p>
+      <% end %>
     </div>
     <div class="card-details">
       <div class="resource-likes">
