--- a/app/assets/stylesheets/pages/_resources-index.scss
+++ b/app/assets/stylesheets/pages/_resources-index.scss
@@ -1,8 +1,7 @@
 
-
 .index-h2 {
   text-align: left;
-  margin: 24px 0px;
+  margin-top: 24px;
   display: inline-block;
   padding: 16px;
   background-color: rgba(255,255,255,0.5);
