--- a/app/assets/stylesheets/components/_comments.scss
+++ b/app/assets/stylesheets/components/_comments.scss
@@ -7,7 +7,7 @@
 }
 
 .existing-comments {
-  height: 500px;
+  max-height: 500px;
   overflow: scroll;
   padding-right: 24px;
   scrollbar-color: $primarycolor;
