--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,10 +1,10 @@
 .navbar-lenguaviva {
   justify-content: space-between;
-  background: white;
+  background: rgba(255,255,255,0.9);
   height: 60px;
 
   .navbar-logo {
-    height: 45px;
+    height: 40px;
     width: 100px;
     object-fit: cover;
   }
