--- a/app/assets/stylesheets/utilities/_custom_container.scss
+++ b/app/assets/stylesheets/utilities/_custom_container.scss
@@ -14,7 +14,7 @@
 
 .container-transp {
   background-color: rgba(255,255,255, 0.5);
-  padding: 0 60px;
+  padding: 0 60px 80px 60px;
 }
 
 .resource-comments-container {
