--- a/app/views/podcasts/show.html.erb
+++ b/app/views/podcasts/show.html.erb
@@ -8,6 +8,7 @@
       <iframe src="<%=@resource.url%>" width="100%" height="200" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
       <%= render "shared/interactions" %>
       <div class="comments-container">
+        <h2 class="pb-2">Comments</h2>
         <%= render "shared/comments", resource: @resource %>
         <%= render "shared/new_comment_form", resource: @resource %>
       </div>
