--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="d-flex m-0 justify-content-between align-items-between">
   <div class="w-50 landing-bg px-4">
     <div class="container landing-text">
-      <%= image_tag "lengua_viva_logo_cropped_text", width: 200, height: 110, class: "mb-4" %>
+      <%= image_tag "lengua_viva_logo_cropped_text.png", width: 200, height: 110, class: "mb-4" %>
       <div class="typewriter">
         <h1>Level Up Your Language</h1>
       </div>
