--- a/app/views/my_account/show.html.erb
+++ b/app/views/my_account/show.html.erb
@@ -4,24 +4,47 @@
 
   <div class="d-flex">
     <div class="w-25 my-account-nav-container">
-      <ul class="list-unstyled nav-list">
-        <li><i class="fa-solid fa-caret-right"></i>  My Profile</li>
-        <li><i class="fa-solid fa-caret-right"></i>  Messages</li>
-        <li><i class="fa-solid fa-caret-right"></i>  Notes</li>
-        <li><i class="fa-solid fa-caret-right"></i>  Bookmarks</li>
-        <li><i class="fa-solid fa-caret-right"></i>  History</li>
+<%# <i class="fa-solid fa-caret-right"></i> %>
+      <ul class="nav flex-column nav-pills" id="pills-tab" role="tablist">
+        <li class="nav-item d-flex" role="presentation">
+          <button class="nav-link active" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="true">My profile</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-messages-tab" data-bs-toggle="pill" data-bs-target="#pills-messages" type="button" role="tab" aria-controls="pills-messages" aria-selected="false">My messages</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-notes-tab" data-bs-toggle="pill" data-bs-target="#pills-notes" type="button" role="tab" aria-controls="pills-notes" aria-selected="false">My notes</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-bookmarks-tab" data-bs-toggle="pill" data-bs-target="#pills-bookmarks" type="button" role="tab" aria-controls="pills-bookmarks" aria-selected="false">My bookmarks</button>
+        </li>
+        <li class="nav-item" role="presentation">
+          <button class="nav-link" id="pills-history-tab" data-bs-toggle="pill" data-bs-target="#pills-history" type="button" role="tab" aria-controls="pills-history" aria-selected="false">My history</button>
+        </li>
       </ul>
     </div>
-    <div class="w-75 my-account-main-container">
-      <div class="my-account-grid-container">
-        <h2>Bookmarks</h2>
-        <div class="my-account-grid margin-bottom">
-          <%= render @bookmarked %>
+
+    <div class="w-75 mb-5">
+      <div class="tab-content" id="pills-tabContent">
+
+        <div class="tab-pane fade show active" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
+          <%= render "my_profile" %>
         </div>
 
-        <h2 class="mt-5">History</h2>
-        <div class="my-account-grid">
-          <%= render @viewed %>
+        <div class="tab-pane fade" id="pills-messages" role="tabpanel" aria-labelledby="pills-messages-tab">
+          <%= render "my_messages" %>
+        </div>
+
+        <div class="tab-pane fade" id="pills-notes" role="tabpanel" aria-labelledby="pills-notes-tab">
+          <%= render "my_notes" %>
+        </div>
+
+        <div class="tab-pane fade" id="pills-bookmarks" role="tabpanel" aria-labelledby="pills-bookmarks-tab">
+          <%= render "my_bookmarks" %>
+        </div>
+
+        <div class="tab-pane fade" id="pills-history" role="tabpanel" aria-labelledby="pills-history-tab">
+          <%= render "my_history" %>
         </div>
 
       </div>
